# application

./: .gitignore  LICENSE  README.md  index.html  latest.md  load.cjs  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: publish.yml
src/: main.css  main.tsx
src-tauri/: Cargo.toml  debug.json  tauri.conf.json
src-tauri/capabilities/: debug.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  structs.rs
src/ui/: bg.css  index.tsx  status.ts
tauri-plugin-updater/: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
tauri-plugin-updater/permissions/autogenerated/: reference.md
tauri-plugin-updater/src/: lib.rs
updater/: Cargo.toml  build.rs
updater/android/: build.gradle.kts  local.properties
updater/android/src/androidTest/java/: ExampleInstrumentedTest.kt
updater/android/src/main/java/: Updater.kt
updater/android/src/test/java/: ExampleUnitTest.kt
updater/permissions/autogenerated/: reference.md
updater/src/: error.rs  lib.rs  mobile.rs  models.rs
