cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "amberdchat"
version = "0.3.0"
description = "A Tauri App"
authors = ["Amber DChat"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "amber_dchat_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "android")'.dependencies]
ahq-updater = { path = "../updater" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.0.1"
tauri-plugin-updater = "2.0.2"

[profile.dev]
incremental = true          # Compile your binary in smaller steps.
rustflags = ["-Zthreads=8"] # Better compile performance.

[profile.release]
codegen-units = 1                            # Allows LLVM to perform better optimization.
lto = true                                   # Enables link-time-optimizations.
opt-level = "s"                              # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"                              # Higher performance by disabling panic handlers.
strip = true                                 # Ensures debug symbols are removed.
trim-paths = "all"                           # Removes potentially privileged information from your binaries.
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"] # Better compile performance.
